src/snapshots/human_date_parser__tests__parse_date_time_1325_next_tuesday.snap
---
source: src/lib.rs
description: "Input: 13:25, next tuesday"
---
DateTime
  - Time: "13:25"
  - Date
    - RelativeSpecifier > Next: "next"
    - Weekday > Tuesday: "tuesday"
