src/snapshots/human_date_parser__tests__parse_date_time_1520_friday.snap
---
source: src/lib.rs
description: "Input: 15:20 friday"
---
DateTime
  - Time: "15:20"
  - Date > Weekday > Friday: "friday"
