src/snapshots/human_date_parser__tests__parse_date_time_20221107_1325.snap
---
source: src/lib.rs
description: "Input: 2022-11-07 13:25"
---
DateTime
  - Date > IsoDate: "2022-11-07"
  - Time: "13:25"
