src/snapshots/human_date_parser__tests__parse_date_time_last_friday_at_1945.snap
---
source: src/lib.rs
description: "Input: last friday at 19:45"
---
DateTime
  - Date
    - RelativeSpecifier > Last: "last"
    - Weekday > Friday: "friday"
  - Time: "19:45"
