src/snapshots/human_date_parser__tests__parse_date_time_this_friday_1700.snap
---
source: src/lib.rs
description: "Input: this friday 17:00"
---
DateTime
  - Date
    - RelativeSpecifier > This: "this"
    - Weekday > Friday: "friday"
  - Time: "17:00"
