src/snapshots/human_date_parser__tests__parse_date_time_today_1830.snap
---
source: src/lib.rs
description: "Input: today 18:30"
---
DateTime
  - Date > Today: "today"
  - Time: "18:30"
