src/snapshots/human_date_parser__tests__parse_single_unit_a_day_ago.snap
---
source: src/lib.rs
description: "Input: a day ago"
---
Ago > Duration > SingleUnit > TimeUnit > Day: "day "
