src/snapshots/human_date_parser__tests__parse_single_unit_a_minute_ago.snap
---
source: src/lib.rs
description: "Input: a minute ago"
---
Ago > Duration > SingleUnit > Minute: "minute "
