src/snapshots/human_date_parser__tests__parse_single_unit_a_month_ago.snap
---
source: src/lib.rs
description: "Input: a month ago"
---
Ago > Duration > SingleUnit > TimeUnit > Month: "month "
