src/snapshots/human_date_parser__tests__parse_single_unit_a_second_ago.snap
---
source: src/lib.rs
description: "Input: a second ago"
---
Ago > Duration > SingleUnit > TimeUnit > Second: "second "
