src/snapshots/human_date_parser__tests__parse_single_unit_a_week_ago.snap
---
source: src/lib.rs
description: "Input: a week ago"
---
Ago > Duration > SingleUnit > TimeUnit > Week: "week "
