src/snapshots/human_date_parser__tests__parse_single_unit_a_year_ago.snap
---
source: src/lib.rs
description: "Input: a year ago"
---
Ago > Duration > SingleUnit > TimeUnit > Year: "year "
